--- a/main.html
+++ b/main.html
@@ -9,10 +9,8 @@
 <body>
 	<!-- the entire body must be written by student -->
 	<h1>What is Time and Space Complexity</h1>
-	<p>Time complexity measures the execution time of an algorithm relative to the input size, helping to understand how the algorithm's runtime grows with the increase in input size.
-	It is used to calculate efficient runtime of any code</p>
-	<p><b>Space complexity</b> measures the memory usage of an algorithm relative to the input size, helping to understand how the algorithm's memory usage grows with the increase in input size.
-	It is also denoted as O(n)</p>
+	<p>Time Complexity measures the execution time of an algorithm relative to the input size, helping to understand how the algorithm's runtime grows with the increase in input size. It is used to calculate efficient runtime of any code</p>
+	<p><b>Space Complexity</b> measures the memory usage of an algorithm relative to the input size, helping to understand how the algorithm's memory usage grows with the increase in input size. It is also denoted as O(n)</p>
     <script type="text/javascript" src="./script.js">
 </script>
 
